# madrigal

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: _permcheck.yml  ci.yml  renovate.yml
docs/superpowers/specs/: 2026-05-24-voice-plan.md  foreman-issue-10-spec.md  foreman-issue-12-spec.md  foreman-issue-13-spec.md  foreman-issue-14-spec.md
