# Root pyproject — madrigal workspace (uv).
# Member packages live under packages/*. Each owns its [project] metadata.
# This file holds: workspace declaration, dev deps, shared ruff/pytest config.

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
madrigal = { workspace = true }

[dependency-groups]
# Dev tools only; real package deps live in member pyprojects.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "diff-cover>=9.0",
    "ruff>=0.14",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "packages/madrigal/src",
]
extend-exclude = [
    ".venv",
    ".tmp",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "B",
    "RUF100",
    "D",
]
ignore = [
    "E501",
    # Google convention documents constructor args in the class docstring and
    # treats magic methods as self-evident — so no docstring required on
    # __init__ (D107) or dunders (D105). Public methods/classes/modules still
    # require them.
    "D105",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings on every function.
"packages/madrigal/tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
files = [
    "packages/madrigal/src",
]

# Lazy-imported optional deps (QwenTTSBackend imports inside __init__ so the
# rest of madrigal.engine stays importable without torch / qwen-tts installed).
[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "qwen_tts",
    "qwen_tts.*",
    "soundfile",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "packages/madrigal/tests",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib --cov=packages/madrigal/src --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
markers = [
    "real_engine: requires real Qwen3-TTS engine (torch + qwen-tts + GPU). Skipped without MADRIGAL_REAL_ENGINE_OK=1; required for done per the never-done-without-running rule (2026-05-24).",
]

[tool.coverage.run]
# The real Qwen3-TTS backend needs torch + GPU, so it can't run in CI (its
# tests are @real_engine, skipped without MADRIGAL_REAL_ENGINE_OK=1). Exclude
# it from the coverage floor rather than counting unrunnable code as "missed".
omit = [
    "*/engine/qwen.py",
]
